<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/ic_launcher_background"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:textColor="#0B2C29"
            android:text="LOGIN"
            android:textSize="25sp"
            android:layout_margin="10sp"
            android:fontFamily="sans-serif-thin"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ImageView
        android:layout_width="80sp"
        android:layout_margin="20sp"
        android:layout_gravity="center"
        android:background="@drawable/ic_launcher_round"
        android:layout_height="80sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="43sp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_email"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="#FFFFFF"
            android:backgroundTint="@color/white"
            android:textSize="16sp"
            android:paddingLeft="10sp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="43sp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10sp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="#FFFFFF"
            android:backgroundTint="@color/white"
            android:paddingLeft="10sp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="200sp"
        android:layout_height="43sp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/ic_launcher_background"
        android:translationZ="2sp"
        android:text="@string/action_sign_in"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:layout_gravity="start"
        android:layout_margin="10sp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_launcher_background"
        android:gravity="center"
        android:translationZ="4sp"
        android:text="Register"
        android:textStyle="normal"
        android:textSize="16sp"
        android:textColor="#FFFCFC"/>

   </RelativeLayout>
</LinearLayout>